# factorio-with-ai

./: .gitignore  AGENTS.md  README.md  factorio-ai-exploration.md  plan.md
.project/hooks/: pre-commit
.project/skills/fwai-board-maintainer/: SKILL.md
.project/skills/fwai-note-writer/: SKILL.md
board/: README.md  board.json  server.py
board/cards/: 00001.md  00002.md  00003.md  00004.md  00005.md  00006.md  00007.md  00008.md  00009.md  00010.md  00011.md  00012.md
board/web/: app.css  app.js  index.html
configs/: scenario.yaml  server-settings.json
controller/: pyproject.toml
controller/src/fwai/: bridge_commands.py  config.py  constraints.py  demo_transfer.py  loop.py  main.py  oneshot.py  protocol.py  rcon_client.py
controller/src/fwai/policies/: __init__.py  mvp_space_policy.py  space_age_policy.py
controller/tests/: test_constraints.py  test_demo_transfer.py  test_policy.py  test_protocol.py
mod/fwai_bridge/: control.lua  data.lua  info.json
notes/: README.md
notes/001-kickoff/: article.md
notes/002-local-kanban-board/: article.md
notes/templates/: kickoff.md  progress.md
scripts/: capture_factorio_window.sh  capture_window_video.sh  convert_mov_to_gif.sh  export_mod_bundle.sh  install_client_mod.sh  install_local_hooks.sh  launchd_board.sh  launchd_server.sh  new_note_article.sh  prepare_runtime_mods.sh  refresh_board.sh  run_action.sh  run_controller.sh  run_day02_demo.sh  set_daylight_mode.sh  start_board.sh  start_client_mac.sh  start_server.sh  verify_modset.sh
